test/sema/typeck/literal/float-format-invalid.out
error: invalid number format.
--> float-format-invalid.dora:1:19
 | fn f() { let _x = 0b1001f32; }
                     ~~~~~~~~~
 | 
1 error found.
