test/sema/typeck/literal/float-format-invalid.dora
fn f() { let _x = 0b1001f32; }
